--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,7 @@ html {
 body {
     font-family: 'Arial';
     line-height: 1.6;
-    color: #333;
-    background-color: #fcfcfc;
+    background: #f3f3f3;
     font-display: fallback;
 }
 
@@ -44,7 +43,7 @@ body {
 section {
     padding: 40px 20px;
     max-width: 1900px;
-    max-height: 10000px;
+    max-height: 1900px;
     margin: 30px auto;
 }
 
@@ -152,7 +151,7 @@ section {
     text-align: center;
     font-size: 2rem;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     color: #000000;
     width: 100%;
     margin-left: auto;
