--- a/styles/tariffs.css
+++ b/styles/tariffs.css
@@ -146,7 +146,7 @@
     
     .card {
         width: 100%;        /* На мобілці займає всю ширину */
-        max-width: 350px;   /* Але не розповзається занадто сильно */
+        max-width: 275px;   /* Але не розповзається занадто сильно */
         padding: 30px 20px;
         border-radius: 35px;
     }
@@ -165,6 +165,6 @@
 
     .btn {
         width: 100%;       /* Кнопка на всю ширину зручніша для пальця */
-        padding: 15px 20px;
+        padding: auto;
     }
 }
