--- a/styles/tariffs.css
+++ b/styles/tariffs.css
@@ -165,6 +165,6 @@
 
     .btn {
         width: 100%;       /* Кнопка на всю ширину зручніша для пальця */
-        padding: 15px;
+        padding: 10px 55px;
     }
 }
