--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -158,7 +158,7 @@ nav a:hover {
         text-align: center;
         width: 100%;
         opacity: 0;
-        transform: translateY(-10px) scale(0.95);
+        transform: translateY(-10px);
         transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
@@ -185,7 +185,6 @@ nav a:hover {
     .home-icon-mobile {
         width: 25px;
         height: 25px;
-        margin-top: 7px;
         object-fit: contain;
     }
 
